RESOLVED FIXED90477
[Gtk][Gamepads] 'warning: comparison is always true due to limited range of data type [-Wtype-limits]' in GamepadsGtk.cpp
https://bugs.webkit.org/show_bug.cgi?id=90477
Summary [Gtk][Gamepads] 'warning: comparison is always true due to limited range of d...
Zan Dobersek
Reported 2012-07-03 11:03:04 PDT
Return value of Vector::find() is assigned to a variable of unsigned type while size_t would be more appropriate.
Attachments
Patch (1.66 KB, patch)
2012-07-03 11:06 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2012-07-03 11:06:48 PDT
WebKit Review Bot
Comment 2 2012-07-03 12:12:32 PDT
Comment on attachment 150645 [details] Patch Clearing flags on attachment: 150645 Committed r121797: <http://trac.webkit.org/changeset/121797>
WebKit Review Bot
Comment 3 2012-07-03 12:12:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.