[Gtk][Gamepads] 'warning: comparison is always true due to limited range of data type [-Wtype-limits]' in GamepadsGtk.cpp https://bugs.webkit.org/show_bug.cgi?id=90477

Reviewed by Martin Robinson.

Vector::find() returns value of type size_t, springing errors when
assigning the value to a variable of type unsigned. Use size_t type
for that variable instead.

No new tests - no changed functionality.

* platform/gtk/GamepadsGtk.cpp:
(WebCore::GamepadsGtk::unregisterDevice):


Canonical link: https://commits.webkit.org/108356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121797 268f45cc-cd09-0410-ab3c-d52691b4dbfc